blind fix for wrapping

--- a/docs/index.css
+++ b/docs/index.css
@@ -129,6 +129,11 @@ div.package {
   border-bottom: 1px solid #d3d3d3;
 }
 
+div.radio  {
+  width: 100%;
+  clear: both;
+}
+
 div.radio label {
   width: 35%;
   float: left;
